Practica 2 JS added
Human Benchmark on JS

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -77,7 +78,7 @@
             <a href="./jquery_form.html" class="button button-1">Formulario JQuery</a>
             <a href="./js_form.html" class="button button-2">Formulario Javascript</a>
             <a href="#" class="button button-3">Human Benchmark JQuery</a>
-            <a href="#" class="button button-4">Human Benchmark Javascript</a>
+            <a href="./js_hb.html" class="button button-4">Human Benchmark Javascript</a>
         </div>
         <h3><a href="https://github.com/neusware/DIW---Tema-9">@neusware</a></h3>
     </div>
