Practica 2 JQuery added

--- a/jquery_hb.html
+++ b/jquery_hb.html
@@ -7,7 +7,7 @@
     <style>
        
     </style>
-    <title>Javascript Human Benchmark</title> 
+    <title>JQuery Human Benchmark</title> 
 
     <style>
 
@@ -61,8 +61,8 @@
     </div>
     <div class="main_container">
         
-        <h1>Javascript Human Benchmark</h1>
-        <button class="main_btn"><a href="./js_hb_2.html">Comenzar</a></button>
+        <h1>JQuery Human Benchmark</h1>
+        <button class="main_btn"><a href="./jquery_hb_2.html">Comenzar</a></button>
 
     </div>
 </body>
